@@ -3,6 +3,7 @@ Version 1.2.3
 
     - Don't send LOG_DEBUG messages to syslog unless --debug flag given.
     - Fix race condition when generating HTTP Date: headers.
+    - Allow command line flags to be specified in /etc/fstab.
 
 Version 1.2.2 (r316) released 20 Dec 2008
 
